--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.9",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "d3": "^7.8.5",
@@ -17,6 +21,7 @@
     "react-scripts": "5.0.1",
     "redux-store": "^0.0.0",
     "redux-thunk": "^2.4.2",
+    "typescript": "^5.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
