--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "blog-top",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.5.3",
-    "@types/node": "^20.4.9",
+    "@types/d3": "^7.4.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.40",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
@@ -15,13 +16,14 @@
     "d3": "^7.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.2",
-    "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.1",
+    "react-hook-form": "^7.45.4",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "redux-store": "^0.0.0",
+    "redux-form": "^8.3.10",
     "redux-thunk": "^2.4.2",
-    "typescript": "^5.1.6",
+    "typescript": "^4.9.5",
+    "typescript-plugin-css-modules": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,8 +49,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "typescript-plugin-css-modules": "^5.0.1"
   }
 }
