--- a/package.json
+++ b/package.json
@@ -1,56 +1,1 @@
-{
-  "name": "test",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/d3": "^7.4.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.40",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "axios": "^1.4.0",
-    "classnames": "^2.3.2",
-    "d3": "^7.8.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.4",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
-    "redux-form": "^8.3.10",
-    "redux-thunk": "^2.4.2",
-    "typescript": "^4.9.5",
-    "typescript-plugin-css-modules": "^5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.22.15"
-  }
-}
+{"jest":{"transformIgnorePatterns":["node_modules/(?!axios)/"]},"name":"test","version":"0.1.0","private":true,"dependencies":{"@testing-library/jest-dom":"^5.17.0","@testing-library/react":"^13.4.0","@testing-library/user-event":"^14.4.3","@types/d3":"^7.4.0","@types/jest":"^27.5.2","@types/node":"^16.18.40","@types/react":"^18.2.20","@types/react-dom":"^18.2.7","axios":"^1.4.0","classnames":"^2.3.2","d3":"^7.8.5","react":"^18.2.0","react-dom":"^18.2.0","react-hook-form":"^7.45.4","react-redux":"^8.1.2","react-router-dom":"^6.15.0","react-scripts":"5.0.1","redux-form":"^8.3.10","redux-thunk":"^2.4.2","typescript":"^4.9.5","typescript-plugin-css-modules":"^5.0.1","web-vitals":"^2.1.4"},"scripts":{"start":"react-scripts start","build":"react-scripts build","test":"react-scripts test","eject":"react-scripts eject"},"eslintConfig":{"extends":["react-app","react-app/jest"]},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]},"devDependencies":{"@babel/plugin-transform-modules-commonjs":"^7.22.15"}}
